fixed problem with unvisible conversion time on small screens

--- a/static/style.css
+++ b/static/style.css
@@ -148,6 +148,10 @@ li.nav_log_container{
 	overflow: visible;
 	white-space: normal;
 }
+.ui-listview > li p{
+	overflow: visible;
+	white-space: normal;
+}
 @media only screen and (max-width:760px){
     .ui-listview > li h2{
         font-size: 0.75em;
